<resources>
    <string name="app_name">PMDM04</string>
    <string name="mensaje_login">Login</string>
    <string name="introducir_usuario">Usuario</string>
    <string name="introducir_password">Contraseña</string>
    <string name="radio_usuario">Usuario</string>
    <string name="radio_admin">Administrador</string>
    <string name="boton_login">Enviar</string>
    <string name="boton_registro">Nuevo usuario</string>
    <string name="boton_salir">Salir</string>
    <string name="nombre_administrador">NomeB Apelido1B Apelido2B</string>
    <string name="nombre_usuario">NomeA Apelido1A Apelido2A</string>
    <string name="titulo_registrar_usuario">Nuevo usuario</string>
    <string name="introducir_producto">Seleccione un producto</string>
    <string name="introducir_cantidad">Seleccione la cantidad</string>
    <string name="introducir_direccion">Dirección</string>
    <string name="introducir_ciudad">Ciudad</string>
    <string name="introducir_codigo_postal">Codigo postal</string>
    <string name="boton_cliente_finalizar">Finalizar</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_apellidos">Apellidos</string>
    <string name="registro_email">Email</string>
    <string name="registro_usuario">Usuario</string>
    <string name="registro_password">Contraseña</string>
    <string name="registro_repite_password">Repite contrseña</string>
    <string name="registro_tipo">Tipo de usuario</string>
    <string name="registro_imagen">Imagen</string>
    <string name="boton_fin_registro">Finalizar registro</string>
    <string name="boton_imagen">Imagen</string>
    <string name="boton_admin_ver_pedidos_en_tramite">Ver pedidos en trámite</string>
    <string name="boton_admin_ver_pedidos_aceptados">Ver pedidos aceptados</string>
    <string name="boton_admin_ver_pedidos_rechazados">Ver pedidos rechazados</string>
    <string name="titulo_admin_ver_pedidos_tramite">Ver perdidos en trámite</string>
    <string name="titulo_admin_ver_pedidos_rechazados">Ver pedidos rechazados</string>
    <string name="titulo_admin_ver_pedidos_aceptados">Ver pedidos aceptados</string>
    <string name="titulo_admin_menu">Menú administrador</string>
    <string name="titulo_cliente_hacer_pedido">Hacer pedido</string>
    <string name="titulo_cliente_ver_pedidos">Ver pedidos en trámite</string>
    <string name="titulo_cliente_ver_compras">Ver comprar realizadas</string>
    <string name="titulo_cliente_finalizar_pedido">Finalizar pedido</string>
    <string name="titulo_cliente_menu">Menú usuario</string>
    <string name="boton_hacer_pedido">Hacer pedido</string>
    <string name="boton_ver_pedidos">Ver pedidos en trámite</string>
    <string name="boton_ver_compras_realizadas">Ver compras realizadas</string>
    <string name="boton_cliente_siguiente">Siguiente</string>
    <string name="boton_actualizar_perfil">Perfil de usuario</string>
</resources>
