<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMenu">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="32dp">

        <include
            layout="@layout/tool_bar_admin"
            android:id="@+id/toolbar"/>

        <include
            layout="@layout/cabecera_admin"
            android:id="@+id/cabecera"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_rojo"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/titulo_admin_menu"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="250dp"
                android:onClick="verPedidosTramite"
                android:text="@string/boton_admin_ver_pedidos_en_tramite" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="250dp"
                android:onClick="verPedidosAceptados"
                android:text="@string/boton_admin_ver_pedidos_aceptados" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="250dp"
                android:onClick="verPedidosRechazados"
                android:text="@string/boton_admin_ver_pedidos_rechazados" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="250dp"
                android:onClick="salir"
                android:text="@string/boton_salir" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>