<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="32dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_verde"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/titulo_registrar_usuario"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/registro_imagen"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagemId"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_below="@+id/textView"
                        android:layout_alignEnd="@+id/textView"
                        android:layout_alignRight="@+id/textView"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/avatar2" />

                    <Button
                        android:id="@+id/btnCargarImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:width="250dp"
                        android:onClick="cargarImagen"
                        android:text="@string/boton_imagen" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/registro_tipo"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_usuario"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_admin"
                        android:textSize="18sp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/registro_nombre"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/registro_apellidos"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/registro_email"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/registro_usuario"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/registro_password"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:visibility="gone"
                    android:text="@string/registro_repite_password"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:visibility="gone"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="24dp">

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:width="250dp"
                        android:onClick="registrarUsuario"
                        android:text="@string/boton_fin_registro" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>