<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClienteFinalizarPedido">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="32dp">

            <include
                layout="@layout/tool_bar_cliente"
                android:id="@+id/toolbar"/>

            <include
                layout="@layout/cabecera_cliente"
                android:id="@+id/cabecera"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_verde"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/titulo_cliente_finalizar_pedido"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingTop="24dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/introducir_ciudad"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingTop="24dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/introducir_direccion"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLines="4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingTop="24dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/introducir_codigo_postal"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:ems="10"
                        android:inputType="number" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="24dp">

                        <Button
                            android:id="@+id/button6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="250dp"
                            android:onClick="finalizar"
                            android:text="@string/boton_cliente_finalizar" />
                    </LinearLayout>
                </LinearLayout>

            </ScrollView>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>